--- a/challenge/index.html
+++ b/challenge/index.html
@@ -27,7 +27,7 @@
   <h1>Scenes From The 6</h1>
 
   <p>
-    Here is a closeup of the coolest cat around who TOTALLY knows responsive web design basics now.
+    Here is a closeup of the coolest cat around who TOTALLY knows responsive web design basics now. Sorta
   </p>
   <div>
     <picture>
